[package]
name = "sproxy_cgi"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
acme-lib = "0.9.1"
jsonwebtoken = "9.3.1"
once_cell = "1.19.0"
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.0.11", features = ["json"] }
