[package]
name = "sproxy_cgi"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
acme-lib = { git = "https://github.com/algesten/acme-lib.git", rev = "275b4fb757119758bb9b459ce1538e68551f6df2" }
jsonwebtoken = "10.3.0"
once_cell = "1.19.0"
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.0.11", features = ["json"] }
